# switchbot_dashboard_for_raspberrypi

./: Dockerfile  compose.yml  pyproject.toml  requirements.txt  requirements_bookworm.txt
app/: main.py
