[project]
authors = [
    {name = "junkei-okinawa", email = "junkei@okinawa.co.jp"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.28.2",
    "python-dotenv<2.0.0,>=1.0.0",
    "influxdb-client<2.0.0,>=1.36.1",
    "schedule<2.0.0,>=1.1.0",
    "pyswitchbot==0.56.0",
]
name = "switchbot-dashboard"
version = "0.1.0"
description = "Dashboard for Switchbot using InfluxDB and Grafana"
readme = "README.md"

[dependency-groups]
dev = [
    "flake8<7.0.0,>=6.0.0",
    "mypy<1.0,>=0.991",
    "black<23.0.0,>=22.12.0",
    "isort<6.0.0,>=5.11.4",
    "pytest<8.0.0,>=7.2.0",
    "types-requests<3.0.0.0,>=2.28.11.15",
]

[tool.uv]
default-groups = []
